# Atomo-3D

./: .gitignore  CMakeLists.txt  readme.md
promts/: promt-01.txt
src/: glad.c  main.cpp
